--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
@@ -11,15 +10,32 @@
 </head>
 <body>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+  <div class="profile">
+    
+    <img class="profile_pic" src="./assets/images/avatar-jessica.jpeg" alt="User picture"/>
+    <h1 class="profile_name">Jessica Randall</h1>
+    <p class="profile_location">London, United Kingdom</p>
+    <p class="profile_bio">"Front-end developer and avid reader."</p>
+    
+    <ul class="socials_list">
+      <li class="socials_item">
+        <a class="socials_link" href="#">GitHub</a>
+      </li>
+      <li class="socials_item">
+        <a class="socials_link" href="#">Frontend Mentor</a>
+      </li>
+      <li class="socials_item">
+        <a class="socials_link" href="#">LinkedIn</a>
+      </li>
+      <li class="socials_item">
+        <a class="socials_link" href="#">Twitter</a>
+      </li>
+      <li class="socials_item">
+        <a class="socials_link" href="#">Instagram</a>
+      </li>
+    </ul>
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+  </div>
 
 </body>
 </html>
