--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
   <div class="profile">
 
     <img class="profile_pic" src="./assets/images/avatar-jessica.jpeg" alt="User picture"/>
-    <h1 class="profile_name">Jessica Randall</h1>
-    <p class="profile_location">London, United Kingdom</p>
+
+    <div class="profile_head">
+      <h1 class="profile_name">Jessica Randall</h1>
+      <p class="profile_location">London, United Kingdom</p>
+    </div>
+    
     <p class="profile_bio">"Front-end developer and avid reader."</p>
     
     <ul class="socials_list">
